--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Massachusetts -- History -- Revolution, 1775-1783'
 - !lcsh 'Concord, Battle of, Concord, Mass., 1775'
 - !lcc 'E201'
+- GITenberg
 title: Gage's Instructions
 url: http://www.gutenberg.org/ebooks/36536
